2005-07-13  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (NO_UNDEFINED_REQUIRED_LIBS): As the code does use
	functions from libevolution-mail, link with it. But OK, let's do
	it (at build time) only on Win32, then.

2005-07-12  Vivek Jain <jvivek@novell.com>
	
	transferred ChangeLog entry here
	(2005-07-10  Shreyas Srinivasan <sshreyas@novell.com>)
	* plugins/groupwise-features/*: Remove the
	camel-groupwise-listener code as it runs in a different plugin.

2005-07-07  Frederic Crozat  <fcrozat@mandriva.com>

	* send-options.c: Add missing header.

2005-07-07  Vivek Jain <jvivek@novell.com>
	
	* org-gnome-groupwise-features.eplug.xml:
	 have one more hookitem in folderview.popup
	 for displaying junk mail settings
	 
	 added four more files
	 * junk-mail-settings.c
	 * junk-settings.c
	 * junk-settings.h
	 * junk-settings.glade
	* Makefile.am : updated to add these files 

2005-06-27  Sushma Rai  <rsushma@novell.com>

	* org-gnome-groupwise-features.eplug.xml:
	Not loading on start-up and not linking to libevolution-mail.

2005-06-27  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Use NO_UNDEFINED. Link with more libraries.

2005-06-25  Harish Krishnaswamy <kharish@novell.com>

	* Makefile.am: Reverting previous commit. Do not remove
	$(EVOLUTION_MAIL_LIBS) from LIBADD. The addressbook dependency
	is not required atm.

2005-06-25  Sushma Rai  <rsushma@novell.com>

	* Makefile.am: Linking to libevolution-mail and libevolution-addressbook

2005-06-24  Sushma Rai  <rsushma@novell.com>

	* org-gnome-groupwise-features.eplug.xml: Set load-on-startup.

2005-06-18  Tor Lillqvist  <tml@novell.com>

	* org-gnome-groupwise-features.eplug.xml: Use SOEXT.

2005-05-24 Vivek Jain <jvivek@novell.com>
	
	* org-gnome-groupwise-features.eplug.xml:
	 removed "Item" tag entries, included a factory method
	 
	 * shared-folder-common.c: changed callback (org_gnome_create_option)
	 to a factory method, check uri before adding the option to the menu.